--- a/style.css
+++ b/style.css
@@ -39,13 +39,23 @@
 	--md-sys-color-on-error-container: #ffdad6;
 }
 
+html {
+	overflow: hidden;
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
 	display: grid;
 	place-items: center;
 	block-size: 100dvh;
+	inline-size: 100dvw;
+	overflow: hidden;
 	background-color: var(--md-sys-color-background);
+	margin: 0;
+	padding: 0;
 }
 
 #game {
@@ -108,6 +118,15 @@ body {
 
 /* Rotate 90deg for phone mode (768px and below) */
 @media screen and (max-width: 768px) {
+
+	html,
+	body {
+		overflow: hidden;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+	}
+
 	body {
 		transform: rotate(-90deg);
 	}
